# badditor

./: CMakeLists.txt  README.md
src/: PieceTable.cpp  PieceTable.h  main.cpp
test/: PieceTableTest.cpp
